--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "kisk": "node index.js",
-    "start": "nodemon index.jsn"
+    "nodin": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "Nielad",
   "license": "ISC",
@@ -18,6 +19,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "mongoose-paginate": "^5.0.3"
+   
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
